fixtures/cs-hash-02/good/gen-salt-cost-9-not-password-context.ts
import bcrypt from "bcrypt";

export function pickUiSalt() {
	return bcrypt.genSaltSync(9);
}
